<resources>
    <string name="app_name">PatientTracker</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="hospital">Hospital</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="app_description">Information system for tracking patients affected by COVID-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">status</string>
    <string name="input">input</string>
    <string name="list">list</string>
    <string name="profile">profile</string>
    <string name="symptoms">Symptoms</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="in_waiting_room">In waiting room</string>
    <string name="hospitalized">Hospitalized</string>
    <string name="released">Released</string>
    <string name="status_title">An overview of the numerous patient conditions</string>
    <string name="profile_title">User\'s profile</string>
    <string name="edit">Edit</string>
    <string name="logout">logout</string>
    <string name="name_label">Name:</string>
    <string name="surname_label">Surname:</string>
    <string name="hospital_label">Hospital:</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="healthy">healthy</string>
    <string name="hospitalize">hospitalize</string>
    <string name="card">card</string>
    <string name="release">release</string>
    <string name="patient_card">patient\'s card</string>
    <string name="first_symptoms">First symptoms:</string>
    <string name="current_symptoms">Current symptoms:</string>
    <string name="hospitalized_on">Hospitalized on:</string>
</resources>
