<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Container">

    <TextView
        android:id="@+id/profileTitle"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/profile_title"
        tools:ignore="MissingConstraints" />

    <ImageView
        style="@style/LogoStyle"
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_healing_black_24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"

        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/nameLabel"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nameTv"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/surnameLabel"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname_label"

        app:layout_constraintTop_toBottomOf="@id/nameTv"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/surnameTv"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/surnameLabel"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hospitalLabel"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hospital_label"

        app:layout_constraintTop_toBottomOf="@id/surnameTv"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hospitalTv"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/hospitalLabel"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        style="@style/ButtonStyle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoutBtn"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/ButtonStyle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"

        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>