<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.EditProfileActivity"
    style="@style/Container">

    <TextView
        android:id="@+id/profileTitle"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/profile_title"
        tools:ignore="MissingConstraints" />

    <ImageView
        style="@style/LogoStyle"
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_healing_black_24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"

        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/nameEt"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/surnameEt"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/nameEt"

        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/hospitalEt"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/surnameEt"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/ButtonStyle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/ButtonStyle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>